# productionRAG

./: .gitignore  README.md  evaluation.py  main.py  pyproject.toml
prod/: compressor.ipynb  langChain.ipynb  multiQuery.ipynb
