[project]
name = "productionrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.3.0",
    "langchain>=1.3.11",
    "langchain-classic>=1.0.8",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.7",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-pinecone>=0.2.13",
    "langfuse>=4.14.0",
    "langgraph>=1.2.7",
    "pypdf>=6.14.2",
    "sentence-transformers>=5.6.0",
]
